[gd_scene load_steps=10 format=3 uid="uid://dprn6g7n0yqe"]

[ext_resource type="Script" path="res://assets/packs/longasstimeago/obstacles/obstacle_b/scripts/obstacle_b.gd" id="1_cisy2"]
[ext_resource type="Script" path="res://modules/physics_interpolation/scripts/physics_interpolation_2d.gd" id="1_nebxi"]
[ext_resource type="Texture2D" uid="uid://drvwyathijkvr" path="res://assets/packs/longasstimeago/obstacles/obstacle_b/textures/obstacle_b_diffuse.png" id="2_r2jmo"]
[ext_resource type="AnimationLibrary" uid="uid://7txwfp0wiqwm" path="res://assets/packs/longasstimeago/obstacles/obstacle_b/animations/obstacle_b_default.tres" id="3_jn0nc"]
[ext_resource type="PackedScene" uid="uid://b3bh30uhgsec1" path="res://tools/hit/hit_give_2d.tscn" id="5_23642"]
[ext_resource type="PackedScene" uid="uid://hrtph5x4ls2m" path="res://tools/kill/kill_scan_2d.tscn" id="6_nsuxl"]

[sub_resource type="Animation" id="Animation_0ka22"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("physics_interpolation_2d/sprite_2d:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit_give_2d/collision_shape_2d:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rva4n"]
_data = {
"RESET": SubResource("Animation_0ka22")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oiffb"]
size = Vector2(28, 7)

[node name="obstacle_b" type="StaticBody2D"]
script = ExtResource("1_cisy2")

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false

[node name="physics_interpolation_2d" type="Node2D" parent="."]
script = ExtResource("1_nebxi")

[node name="sprite_2d" type="Sprite2D" parent="physics_interpolation_2d"]
texture = ExtResource("2_r2jmo")
hframes = 4

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rva4n"),
"obstacle_b_default": ExtResource("3_jn0nc")
}

[node name="hit_give_2d" parent="." instance=ExtResource("5_23642")]

[node name="collision_shape_2d" type="CollisionShape2D" parent="hit_give_2d"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_oiffb")

[node name="kill_scan_2d" parent="." instance=ExtResource("6_nsuxl")]
